--- a/Learner/Learner.csproj
+++ b/Learner/Learner.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.App" Version="1.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="9.0.2-beta2" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Broadlink.Net\Broadlink.Net.csproj" />
